# mthds-demo

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  run.sh
bundles/: code_review.mthds  content.mthds  research.mthds
src/: __init__.py  cli.py  runtime.py
