[project]
name = "mthds-crewai-ollama"
version = "0.1.0"
description = "Run MTHDS bundles as CrewAI crews with Ollama inference"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    "crewai>=0.80.0",
    "langchain-community>=0.3.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
# For Python < 3.11 which lacks built-in tomllib
legacy = ["tomli>=2.0"]

[project.scripts]
mthds-crew = "src.cli:main"
